# krypto-rates

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  lerna.json  package.json  tsconfig.eslint.json  tsconfig.json
apps/rates/server/: package.json
apps/rates/serverless/: serverless.yml  webpack.config.js
clients/js/: CHANGELOG.md  package.json  tsconfig.json
clients/js/src/: clients.ts  types.ts  utils.ts
clients/js/tests/: api.test.ts
clients/python/: CHANGELOG.md  Pipfile  README.md  package.json  pyproject.toml  setup.cfg  setup.py
clients/python/krypto_rates_client/: client.py  types.py  utils.py
config/: markets.yml
libs/python/rates/client/: package.json
libs/python/rates/client/krypto_rates_client/: __init__.py  client.py
libs/rates/client/: CHANGELOG.md  jest.config.js  package.json  tsconfig.json
libs/rates/client/src/: index.ts  types.ts  utils.ts
libs/rates/client/tests/: api.test.ts
libs/rates/common/: CHANGELOG.md  README.md  package.json  tsconfig.json
libs/rates/core/: README.md
libs/rates/core/src/: schema.ts  types.ts  utils.ts
libs/rates/sources/src/: utils.ts
libs/rates/sources/src/services/: coinlayer.ts  cryptocompare.ts  currencylayer.ts  sbif.ts
libs/rates/utils/: CHANGELOG.md  README.md  package.json
libs/rates/utils/src/: index.ts
