[tool.poetry]
name = "krypto-rates-client"
version = "2.0.0-alpha.6"
description = "Krypto Rates Python Client"
authors = ["Raptor Systems SpA <raptor@raptorsystems.cl>"]
license = "MIT"
readme="README.md"
repository="https://github.com/raptorsystems/krypto-rates"
homepage="https://github.com/raptorsystems/krypto-rates"
classifiers=[
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
requests-toolbelt = "^0.9.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
